Created the Controller class, Dtos and service class