@@ -1,22 +1,36 @@
 package com.group2.To_Do_App.exception;
 
 import com.group2.To_Do_App.exception.customException.InvalidInputException;
+import com.group2.To_Do_App.exception.customException.ResourceNotFoundException;
 import com.group2.To_Do_App.exception.errorResponse.ErrorResponseFormat;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
 import java.util.Arrays;
+import java.util.List;
 
 @ControllerAdvice
 public class ApplicationExceptionHandler extends ResponseEntityExceptionHandler {
 
-    @ExceptionHandler({InvalidInputException.class})
-    public ResponseEntity<Object> handleResourceNotFoundException(RuntimeException ex) {
-        ErrorResponseFormat error = new ErrorResponseFormat(Arrays.asList(ex.getMessage()));
+    @ExceptionHandler({InvalidInputException.class, ResourceNotFoundException.class})
+    public ResponseEntity<Object> handleResourceNotFoundException(RuntimeException ex, WebRequest request) {
+        ErrorResponseFormat error = new ErrorResponseFormat(
+                List.of(ex.getMessage()),
+                HttpStatus.BAD_REQUEST
+        );
         return new ResponseEntity<>(error, HttpStatus.NOT_FOUND);
+    }
+    @ExceptionHandler(Exception.class)
+    public ResponseEntity<ErrorResponseFormat> handleAllExceptions(Exception exception, WebRequest request) {
+        ErrorResponseFormat error = new ErrorResponseFormat(
+                List.of("An unexpected error occurred. Please try again later."),
+                HttpStatus.INTERNAL_SERVER_ERROR
+        );
+        return new ResponseEntity<>(error, HttpStatus.INTERNAL_SERVER_ERROR);
     }
 
 }
